@@ -69,6 +69,7 @@ ERROR_TOOL_AGENT_SOAP_MISSING_REQUIRED_PARAMETERS = Missing required formal para
 ERROR_TOOL_AGENT_TXW_MISSING_REQUIRED_PARAMETERS = Missing required formal parameters. There must be at least formal parameters with Id 'url', 'xml'/'text' and 'return_code' specifying WEB Service url, XML/Text data and return code
 
 ERROR_TOOL_AGENT_XPATH_MISSING_REQUIRED_PARAMETERS = Missing required formal parameters. Parameters with Id "Node", "Expressions" and "ResultVariableIds" have to be defined
+ERROR_TOOL_AGENT_XPATH_EXPRESSIONS_AND_RESULT_VARIABLE_IDS_PARAMETERS_NOT_MATCHING = The actual parameters for 'Expressions' and 'ResultingVariableIds' formal parameters of XPath tool agent miss-matched - the number of provided expressions and corresponding variable Ids is not matching
 
 ERROR_TOOL_AGENT_XPIL_XPIL_PARAMETER_REQUIRED = Missing required formal parameter. Parameter with Id "XPIL" has to be defined
 
