@@ -62,6 +62,7 @@ ERROR_TOOL_AGENT_SOAP_MISSING_REQUIRED_PARAMETERS = Nedostaju neophodni formalni
 ERROR_TOOL_AGENT_TXW_MISSING_REQUIRED_PARAMETERS = Nedostaju neophodni formalni parametri. Moraju postojati bar formalni parameteri 'url', 'xml'/'text' i 'return_code' koji ukazuju na URL WEB Servisa, XML podatke i povratni kod
 
 ERROR_TOOL_AGENT_XPATH_MISSING_REQUIRED_PARAMETERS = Nedostaje neophodni formalni parametar. Parametar sa Id-om "Node", "Expressions" i "ResultVariableIds" moraju biti definisani
+ERROR_TOOL_AGENT_XPATH_EXPRESSIONS_AND_RESULT_VARIABLE_IDS_PARAMETERS_NOT_MATCHING = Stvarni parametri za 'Expressions' i 'ResultingVariableIds' formalne parametre XPath tool agent-a se ne sla\u017Eu - broj izraza i odgovaraju\u0107ih Id-ova varijabli nije isti
 
 ERROR_TOOL_AGENT_XPIL_XPIL_PARAMETER_REQUIRED = Nedostaje neophodni formalni parametar. Parametar sa Id-om "XPIL" mora biti definisan
 
