@@ -87,6 +87,8 @@ public final class SharkValidationErrorIds {
 
    public static final String ERROR_TOOL_AGENT_XPATH_MISSING_REQUIRED_PARAMETERS = "ERROR_TOOL_AGENT_XPATH_MISSING_REQUIRED_PARAMETERS";
 
+   public static final String ERROR_TOOL_AGENT_XPATH_EXPRESSIONS_AND_RESULT_VARIABLE_IDS_PARAMETERS_NOT_MATCHING = "ERROR_TOOL_AGENT_XPATH_EXPRESSIONS_AND_RESULT_VARIABLE_IDS_PARAMETERS_NOT_MATCHING";
+
    public static final String ERROR_TOOL_AGENT_XPIL_XPIL_PARAMETER_REQUIRED = "ERROR_TOOL_AGENT_XPIL_XPIL_PARAMETER_REQUIRED";
 
    public static final String ERROR_TOOL_AGENT_XSLT_OR_FOP_RESULT_PARAMETER_REQUIRED = "ERROR_TOOL_AGENT_XSLT_OR_FOP_RESULT_PARAMETER_REQUIRED";
